# kr260-mobile-robot

./: .gitignore  README.md  startup_sequence.md
docs/: architecture.md  ps_pl_partition.md  register_map.md
fpga/firmware/: kr260_lidar_garis_astar_fw.dtsi  shell.json
fpga/hls/: build_hls.tcl  lidar_hw_filter.cpp
ros2_ws/config/: cyclonedds_laptop_template.xml  lidar_filter_params.yaml
ros2_ws/src/dxl_serial_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/dxl_serial_bridge/dxl_serial_bridge/: test_serial.py.save
ros2_ws/src/lidar_pl_accel/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_pl_accel/src/: lidar_pl_node.cpp
ros2_ws/src/lidar_spatial_filter/: CMakeLists.txt  package.xml  setup_dds_kria.sh  setup_dds_wifi.sh
ros2_ws/src/lidar_spatial_filter/config/: LAPTOP_QUICKSTART.txt  LAPTOP_SETUP_MANUAL.md  cyclonedds.xml  cyclonedds.xml.backup_20260402_115942  cyclonedds_laptop.xml  setup_laptop_auto.sh
ros2_ws/src/lidar_spatial_filter/docs/: KRIA_WIFI_SETUP.md  LAPTOP_WIFI_SETUP.md
ros2_ws/src/lidar_spatial_filter/docs/laptop_files/: setup_laptop.sh
ros2_ws/src/lidar_spatial_filter/launch/: lidar_filter_with_driver.launch.py  lidar_processing.launch.py
ros2_ws/src/lidar_spatial_filter/msg/: Landmark.msg  LandmarkArray.msg  Obstacle.msg  ObstacleArray.msg  ROIClassification.msg
ros2_ws/src/lidar_spatial_filter/scripts/wifi_setup/: 00_fix_firmware.sh  01_test_dongle.sh  02_setup_wifi.sh  02_setup_wifi_manual.sh  03_setup_cyclonedds.sh  04_test_ros2.sh  05_setup_network_final.sh  FIRMWARE_FIX.md  README.md
ros2_ws/src/lidar_spatial_filter/src/: lidar_filter_node.cpp  lidar_filter_node_original.cpp.bak  lidar_filter_node_refactored.cpp  lidar_filter_node_stage1.cpp.bak
ros2_ws/src/mobile_robot_pkg/: package.xml  setup.py
ros2_ws/src/mobile_robot_pkg/launch/: bringup.launch.py
ros2_ws/src/mobile_robot_pkg/maps/: astar_execution_log.txt  map.json
ros2_ws/src/mobile_robot_pkg/mobile_robot_pkg/: computing_unit.py  computing_unit.py.backup_hw  computing_unit.py.backup_profiling  computing_unit.py.sw_only  control_unit.py
ros2_ws/src/robot_web_ui/: package.xml  setup.py
ros2_ws/src/robot_web_ui/resource/: robot_web_ui
ros2_ws/src/robot_web_ui/robot_web_ui/: web_ui_node.py
ros2_ws/src/robot_web_ui/static/: index.html
